Update apps.json to use versions array format

--- a/apps.json
+++ b/apps.json
@@ -6,28 +6,43 @@
             "name": "invoice+",
             "bundleIdentifier": "com.tigerrack.invoiceMobile",
             "developerName": "TigerRack",
-            "version": "1.0.0",
-            "versionDate": "2026-01-05T00:00:00-00:00",
-            "versionDescription": "初回ベータリリース\n\n主な機能:\n- 書類スキャン機能\n- 自動サイズ判定 (A4/A5/レシート)\n- 解像度チェック (電帳法準拠)\n- セキュア通信 (JWT認証)\n- サーバー接続先の動的変更\n\n初回設定:\nログイン画面の設定アイコンから接続先を設定してください:\nhttps://192.168.24.151:9005/api",
-            "downloadURL": "https://raw.githubusercontent.com/jubilee99/invoice-plus-altstore/main/ipa/invoice_mobile_v1.0.0.ipa",
+            "subtitle": "電帳法準拠の請求書管理",
             "localizedDescription": "電子帳簿保存法に準拠した請求書管理モバイルアプリ。カメラを使用した高品質スキャン、自動サイズ判定、解像度チェックなどの機能を搭載。社内LANで本番サーバーと連携し、請求書のスキャン・アップロードが可能です。",
             "iconURL": "https://raw.githubusercontent.com/jubilee99/invoice-plus-altstore/main/assets/icon.png",
             "tintColor": "007AFF",
-            "size": 10343080,
             "screenshotURLs": [
                 "https://raw.githubusercontent.com/jubilee99/invoice-plus-altstore/main/assets/screenshot1.png",
                 "https://raw.githubusercontent.com/jubilee99/invoice-plus-altstore/main/assets/screenshot2.png"
             ],
-            "permissions": [
+            "versions": [
                 {
-                    "type": "camera",
-                    "usageDescription": "請求書のスキャンにカメラを使用します"
-                },
-                {
-                    "type": "photos",
-                    "usageDescription": "スキャンした画像を保存するためにフォトライブラリへのアクセスが必要です"
+                    "version": "1.0.0",
+                    "date": "2026-01-05T00:00:00-00:00",
+                    "localizedDescription": "初回ベータリリース\n\n主な機能:\n- 書類スキャン機能\n- 自動サイズ判定 (A4/A5/レシート)\n- 解像度チェック (電帳法準拠)\n- セキュア通信 (JWT認証)\n- サーバー接続先の動的変更\n\n初回設定:\nログイン画面の設定アイコンから接続先を設定してください:\nhttps://192.168.24.151:9005/api",
+                    "downloadURL": "https://raw.githubusercontent.com/jubilee99/invoice-plus-altstore/main/ipa/invoice_mobile_v1.0.0.ipa",
+                    "size": 10343080
                 }
-            ]
+            ],
+            "appPermissions": {
+                "entitlements": [
+                    {
+                        "name": "camera"
+                    },
+                    {
+                        "name": "photos"
+                    }
+                ],
+                "privacy": [
+                    {
+                        "name": "Camera",
+                        "usageDescription": "請求書のスキャンにカメラを使用します"
+                    },
+                    {
+                        "name": "PhotoLibrary",
+                        "usageDescription": "スキャンした画像を保存するためにフォトライブラリへのアクセスが必要です"
+                    }
+                ]
+            }
         }
     ],
     "news": [
